name:                Epsilon
version:             0.4
synopsis:            A syntax editor
description:         Like a text editor, but with syntax
homepage:            none
license:             BSD3
license-file:        LICENSE
author:              Marc Coiffier
maintainer:          marc.coiffier@gmail.com
category:            Development
build-type:          Simple
cabal-version:       >=1.8
data-files:          resources/*.ttf

executable Epsilon
  build-depends:       base ==4.6.*, containers ==0.5.*, OpenGL ==2.8.*, GLUT ==2.4.*, FTGL ==1.333.*, lens ==3.9.*, clock ==0.3.*, safe ==0.3.*, directory ==1.2.*
  hs-source-dirs:      src
  ghc-options:         -W
  main-is:             Main.hs

source-repository head
  type: git
  location: git://github.com/lih/Epsilon.git
