name:                Epsilon
version:             0.4
synopsis:            A syntax editor
description:         Like a text editor, but with syntax
homepage:            none
license:             BSD3
license-file:        LICENSE
author:              Marc Coiffier
maintainer:          marc.coiffier@gmail.com
category:            Development
build-type:          Simple
cabal-version:       >=1.8
data-files:          resources/*.ttf

executable Epsilon
  build-depends:       base, containers, OpenGL, GLUT, FTGL, lens, clock, safe, directory
  hs-source-dirs:      src
  ghc-options:         -W
  main-is:             Main.hs

source-repository head
  type: git
  location: git://github.com/lih/Epsilon.git
